# park_os

./: .gitmodules  Cargo.toml  Makefile  README.md
disk/: disk.iso  floppydisk.iso
src/: fat.rs  lib.rs  vga_buffer.rs  x86.rs
src/arch/x86_64/: boot.asm  grub.cfg  interrupts.asm  linker.ld  long_mode_init.asm  multiboot_header.asm
src/io/: ata.rs  ide.rs  ide_disk.rs  keyboard.rs  membuffer.rs  mod.rs  pci.rs  pic.rs  port.rs  timer.rs
src/memory/: area_frame_allocator.rs  entry.rs  mod.rs  page.rs  pagetable.rs  table.rs
src/memory/paging/: entry.rs  mod.rs
tools/: gdbserver
