[package]
name = "park_os"
version = "0.0.1"
authors = ["Alex Parker <3zanders@gmail.com>"]

[dependencies]
rlibc = "0.1.4"
spin = "0.3.4"

[dependencies.multiboot2]
git = "https://github.com/phil-opp/multiboot2-elf64"

[dependencies.bitflags]
version = "0.4.0"
features = ["no_std"]

[lib]
crate-type = ["staticlib"]
